--- a/feature-account-impl/src/main/res/layout/fragment_profile.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_profile.xml
@@ -13,8 +13,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="16dp"
         android:orientation="vertical">
 
@@ -26,15 +26,15 @@
             <TextView
                 style="@style/TextAppearance.NovaFoundation.Header1"
                 android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_marginEnd="16dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_weight="1"
                 android:text="@string/profile_settings_title"
                 android:textColor="@color/white" />
 
             <io.novafoundation.nova.feature_account_api.view.SelectedWalletView
-                android:layout_width="wrap_content"
                 android:id="@+id/settingsAvatar"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
@@ -82,12 +82,21 @@
             android:layout_height="wrap_content">
 
             <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsItemView
+                android:id="@+id/settingsCurrency"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:icon="@drawable/ic_currency"
+                app:title="@string/wallet_currency_title"
+                tools:settingValue="USD" />
+
+            <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsItemView
                 android:id="@+id/settingsLanguage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:icon="@drawable/ic_language"
                 app:title="@string/language_title"
                 tools:settingValue="English" />
+
         </io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupView>
 
         <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupHeaderView
