--- a/feature-wallet-impl/src/main/res/layout/fragment_select_currency.xml
+++ b/feature-wallet-impl/src/main/res/layout/fragment_select_currency.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <io.novafoundation.nova.common.view.Toolbar
-        android:id="@+id/currencyListToolbar"
+        android:id="@+id/currencyToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:dividerVisible="false"
