Ledger/start import (#391)
* Extract instruction components into separate views

* Start import ledger screen

* Code style

* Code style

--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -173,4 +173,17 @@
         <attr name="title" />
         <attr name="subTitle" />
     </declare-styleable>
+
+    <declare-styleable name="InstructionStepView">
+        <attr name="stepNumber" format="string" />
+        <attr name="stepText" format="string" />
+    </declare-styleable>
+
+    <declare-styleable name="NovaConnectView">
+        <attr name="targetImage" format="reference" />
+    </declare-styleable>
+
+    <declare-styleable name="LinkView">
+        <attr name="linkText" format="string" />
+    </declare-styleable>
 </resources>
