--- a/app/src/main/res/navigation/import_ledger_graph.xml
+++ b/app/src/main/res/navigation/import_ledger_graph.xml
@@ -7,5 +7,18 @@
     <fragment
         android:id="@+id/startImportLedgerFragment"
         android:name="io.novafoundation.nova.feature_ledger_impl.presentation.account.connect.start.StartImportLedgerFragment"
-        android:label="StartImportLedgerFragment" />
+        android:label="StartImportLedgerFragment" >
+
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_startImportLedgerFragment_to_fillWalletImportLedgerFragment"
+            app:destination="@id/fillWalletImportLedgerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/fillWalletImportLedgerFragment"
+        android:name="io.novafoundation.nova.feature_ledger_impl.presentation.account.connect.fillWallet.FillWalletImportLedgerFragment"
+        android:label="FillWalletImportLedgerFragment" />
 </navigation>
