--- a/feature-account-api/src/main/res/layout/item_chain_account.xml
+++ b/feature-account-api/src/main/res/layout/item_chain_account.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_primary_list_item"
     tools:background="@color/black">
 
     <ImageView
@@ -24,24 +24,23 @@
         style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="5dp"
         android:includeFontPadding="false"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/chainAccountAccountAddress"
         app:layout_constraintStart_toEndOf="@+id/chainAccountChainIcon"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
         tools:text="Polkadot" />
 
     <ImageView
         android:id="@+id/chainAccountAccountIcon"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@id/chainAccountAccountAddress"
         app:layout_constraintStart_toStartOf="@+id/chainAccountChainName"
         app:layout_constraintTop_toTopOf="@id/chainAccountAccountAddress"
         tools:src="@color/colorAccent" />
-
 
     <TextView
         android:id="@+id/chainAccountAccountAddress"
@@ -51,7 +50,6 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="3dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
         android:ellipsize="middle"
         android:includeFontPadding="false"
         android:singleLine="true"
@@ -60,7 +58,7 @@
         app:layout_constraintEnd_toStartOf="@+id/labeledTextAction"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/chainAccountAccountIcon"
-        app:layout_constraintTop_toBottomOf="@id/chainAccountChainName"
+        app:layout_constraintTop_toBottomOf="@+id/chainAccountChainName"
         app:layout_constraintVertical_bias="0.0"
         app:layout_goneMarginEnd="16dp"
         app:layout_goneMarginStart="16dp"
@@ -74,8 +72,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="12dp"
         android:src="@drawable/ic_more"
-        app:tint="@color/white_32"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white_32" />
+</merge>
