--- a/feature-ledger-impl/src/main/res/layout/fragment_import_ledger_fill_wallet.xml
+++ b/feature-ledger-impl/src/main/res/layout/fragment_import_ledger_fill_wallet.xml
@@ -13,8 +13,8 @@
 
 
         <io.novafoundation.nova.common.view.Toolbar
+            android:id="@+id/fillWalletImportLedgerToolbar"
             android:layout_width="match_parent"
-            android:id="@+id/previewImportParitySignerToolbar"
             android:layout_height="wrap_content"
             app:dividerVisible="false" />
 
@@ -25,7 +25,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/account_parity_signer_import_preview_title" />
+            android:text="@string/account_ledger_import_fill_title" />
 
         <TextView
             style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
@@ -34,27 +34,25 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/account_parity_signer_import_preview_description"
+            android:text="@string/account_ledger_import_fill_description"
             android:textColor="@color/white_64" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/fillWalletImportLedgerAccounts"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:id="@+id/previewImportParitySignerAccounts"
             android:layout_marginTop="16dp"
             android:layout_weight="1"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:clipToPadding="false"
             android:paddingBottom="93dp"
-            tools:listitem="@layout/item_chain_account" />
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
     </LinearLayout>
 
-
     <io.novafoundation.nova.common.view.PrimaryButton
+        android:id="@+id/fillWalletImportLedgerContinue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:id="@+id/previewImportParitySignerContinue"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="25dp"
