Propagate new currency display in all fabrics for each of the modules

--- a/feature-assets/src/main/res/layout/fragment_balance_detail.xml
+++ b/feature-assets/src/main/res/layout/fragment_balance_detail.xml
@@ -31,11 +31,11 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <ImageView
-                android:layout_marginTop="16dp"
                 android:id="@+id/balanceDetailBack"
-                android:layout_marginStart="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
                 android:padding="8dp"
                 android:src="@drawable/ic_arrow_back"
                 app:layout_constraintStart_toStartOf="parent"
@@ -109,12 +109,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                app:title="@string/wallet_your_balance"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/balanceDetailBlur" />
+                app:layout_constraintTop_toBottomOf="@id/balanceDetailBlur"
+                app:title="@string/wallet_your_balance" />
 
             <io.novafoundation.nova.feature_assets.presentation.balance.assetActions.AssetActionsView
                 android:id="@+id/balanceDetaiActions"
@@ -122,8 +122,8 @@
                 android:layout_height="@dimen/asset_height"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
