Finish import ledger wallet

--- a/app/src/main/res/navigation/import_ledger_graph.xml
+++ b/app/src/main/res/navigation/import_ledger_graph.xml
@@ -30,6 +30,14 @@
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_fillWalletImportLedgerFragment_to_finishImportLedgerFragment"
+            app:destination="@id/finishImportLedgerFragment" />
     </fragment>
 
     <fragment
@@ -58,5 +66,21 @@
             app:popExitAnim="@anim/fragment_open_exit"
             android:id="@+id/action_selectAddressImportLedgerFragment_to_fillWalletImportLedgerFragment"
             app:popUpTo="@id/fillWalletImportLedgerFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/finishImportLedgerFragment"
+        android:name="io.novafoundation.nova.feature_ledger_impl.presentation.account.connect.finish.FinishImportLedgerFragment"
+        android:label="FinishImportLedgerFragment">
+
+        <action
+            android:id="@+id/action_finishImportLedgerFragment_to_pincodeFragment"
+            app:destination="@id/pincodeFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            app:popUpTo="@id/welcomeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
