--- a/feature-dapp-impl/src/main/res/layout/bottom_sheet_confirm_authorize.xml
+++ b/feature-dapp-impl/src/main/res/layout/bottom_sheet_confirm_authorize.xml
@@ -11,6 +11,7 @@
         android:id="@+id/confirmAuthorizeNovaIcon"
         style="@style/Widget.Nova.Icon.Big"
         android:layout_marginTop="20dp"
+        android:padding="16dp"
         android:src="@drawable/ic_nova_wallet"
         app:layout_constraintEnd_toStartOf="@+id/confirmAuthorizeNovaArrow"
         app:layout_constraintHorizontal_bias="0.5"
