--- a/feature-crowdloan-impl/src/main/res/layout/fragment_crowdloans.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_crowdloans.xml
@@ -21,20 +21,20 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="17dp"
             android:layout_marginTop="25dp"
-            android:text="@string/crowdloan_crowdloan"
             android:layout_marginEnd="16dp"
+            android:text="@string/crowdloan_crowdloan"
             app:layout_constraintEnd_toStartOf="@+id/crowdloanAvatar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <io.novafoundation.nova.feature_account_api.view.SelectedWalletView
-            android:layout_width="wrap_content"
             android:id="@+id/crowdloanAvatar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="25dp"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <io.novafoundation.nova.feature_wallet_api.presentation.view.AssetSelectorView
             android:id="@+id/crowdloanAssetSelector"
@@ -49,60 +49,201 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/crowdloanTitle" />
 
-        <View
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/crowdloanAbout"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/crowdloanMainDescription"
+            android:padding="16dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/crowdloanAssetSelector"
-            tools:background="@color/blurColor" />
+            tools:background="@color/blurColor"
+            tools:visibility="visible">
 
-        <TextView
-            android:id="@+id/crowdloanAboutTitle"
-            style="@style/TextAppearance.NovaFoundation.Body1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/crowdloan_about"
-            app:layout_constraintEnd_toEndOf="@id/crowdloanAbout"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintStart_toStartOf="@id/crowdloanAbout"
-            app:layout_constraintTop_toTopOf="@id/crowdloanAbout" />
+            <TextView
+                android:id="@+id/crowdloanAboutTitle"
+                style="@style/TextAppearance.NovaFoundation.Body1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/crowdloan_about"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/crowdloanMainDescription"
-            style="@style/TextAppearance.NovaFoundation.Body2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:paddingBottom="16dp"
-            android:textColor="@color/white_64"
-            app:layout_constraintEnd_toEndOf="@id/crowdloanAboutTitle"
-            app:layout_constraintStart_toStartOf="@id/crowdloanAboutTitle"
-            app:layout_constraintTop_toBottomOf="@id/crowdloanAboutTitle"
-            tools:text="@string/crowdloan_main_description_v2_2_0" />
+            <TextView
+                android:id="@+id/crowdloanMainDescription"
+                style="@style/TextAppearance.NovaFoundation.Body2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:textColor="@color/white_64"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/crowdloanAboutTitle"
+                tools:text="@string/crowdloan_main_description_v2_2_0" />
 
-        <io.novafoundation.nova.common.view.GoNextView
-            android:id="@+id/crowdloanMyContributions"
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/crowdloanTotalContributedContainer"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:paddingHorizontal="16dp"
             android:text="@string/crowdloan_your_contributions"
-            app:actionIcon="@drawable/ic_chevron_right"
-            app:dividerVisible="false"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/crowdloanAbout"
-            tools:background="@color/blurColor" />
+            tools:background="@color/blurColor"
+            tools:visibility="visible">
+
+            <LinearLayout
+                android:id="@+id/crowdloanTotalContributedTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/crowdloan_your_contributions"
+                    android:textColor="@color/white_64"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <io.novafoundation.nova.common.view.CounterView
+                    android:id="@+id/crowdloanTotalContributionsCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    tools:text="14" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="21dp"
+                android:src="@drawable/ic_chevron_right"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/white_48" />
+
+            <TextView
+                android:id="@+id/crowdloanTotalContributedValue"
+                style="@style/TextAppearance.NovaFoundation.Bold.LargeTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="3dp"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/crowdloanTotalContributedTitle"
+                tools:text="$214.66" />
+
+            <TextView
+                android:id="@+id/crowdloanTotalContributedFiat"
+                style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="20dp"
+                android:textColor="@color/white_64"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/crowdloanTotalContributedValue"
+                tools:text="$214.66" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/crowdloanTotalContributedShimmering"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:paddingHorizontal="16dp"
+            android:text="@string/crowdloan_your_contributions"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/crowdloanTotalContributedContainer"
+            tools:background="@color/blurColor"
+            tools:visibility="visible">
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/crowdloanShimmeringFirst"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="26dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <View
+                    android:layout_width="88dp"
+                    android:layout_height="12dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/bg_shimerring" />
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/crowdloanShimmeringSecond"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/crowdloanShimmeringFirst">
+
+                <View
+                    android:layout_width="120dp"
+                    android:layout_height="22dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/bg_shimerring" />
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/crowdloanShimmeringThird"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="25dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/crowdloanShimmeringSecond">
+
+                <View
+                    android:layout_width="70dp"
+                    android:layout_height="12dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/bg_shimerring" />
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/crowdloanList"
@@ -118,7 +259,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/crowdloanMyContributions"
+            app:layout_constraintTop_toBottomOf="@id/crowdloanTotalContributedShimmering"
             tools:itemCount="10"
             tools:listitem="@layout/item_crowdloan"
             tools:visibility="visible" />
@@ -128,11 +269,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
-            app:image="@drawable/ic_placeholder"
             android:text="@string/crowdloan_empty_message_v2_2_0"
+            app:image="@drawable/ic_placeholder"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/crowdloanMyContributions"
+            app:layout_constraintTop_toBottomOf="@id/crowdloanTotalContributedShimmering"
             app:layout_constraintVertical_bias="0.45" />
 
         <ProgressBar
@@ -145,7 +286,7 @@
             android:indeterminateTint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/crowdloanMyContributions" />
+            app:layout_constraintTop_toBottomOf="@id/crowdloanTotalContributedShimmering" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
