total contributions fix

--- a/feature-crowdloan-impl/src/main/res/layout/item_contributions_header.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/item_contributions_header.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
-    android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="14dp"
     android:paddingHorizontal="16dp">
@@ -16,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
-        android:text="@string/crowdloan_your_contributions"
+        android:text="@string/common_total"
         android:textColor="@color/white_64"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
