--- a/feature-wallet-api/src/main/res/values/attrs.xml
+++ b/feature-wallet-api/src/main/res/values/attrs.xml
@@ -15,4 +15,8 @@
     <declare-styleable name="PriceSectionView">
         <attr name="sectionTitle" />
     </declare-styleable>
+
+    <declare-styleable name="ChooseAmountView">
+        <attr name="title" />
+    </declare-styleable>
 </resources>
