Showed locks and reserved balance in total balance breakdown

--- a/feature-crowdloan-impl/src/main/res/layout/fragment_crowdloans.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_crowdloans.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="17dp"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/crowdloan_crowdloan"
+            android:text="@string/common_crowdloan"
             app:layout_constraintEnd_toStartOf="@+id/crowdloanAvatar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
