--- a/feature-assets/src/main/res/layout/fragment_balance_breakdown.xml
+++ b/feature-assets/src/main/res/layout/fragment_balance_breakdown.xml
@@ -14,40 +14,39 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
-  <FrameLayout
-      android:id="@+id/frameLayout"
-      android:layout_width="match_parent"
+  <TextView
+      android:id="@+id/balanceBreakdownTitle"
+      style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:paddingHorizontal="16dp"
-      android:paddingTop="25dp"
-      android:paddingBottom="8dp"
-      app:layout_constraintTop_toTopOf="parent">
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="23dp"
+      android:text="@string/feature_asset_balance_breakdown_total_balance"
+      android:textColor="@color/white"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/feature_asset_balance_breakdown_total_balance"
-        android:textColor="@color/white" />
-
-    <TextView
-        android:id="@+id/balanceBreakdownTotal"
-        style="@style/TextAppearance.NovaFoundation.SemiBold.SubHeadline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:textColor="@color/white"
-        tools:text="$11,529.26" />
-
-  </FrameLayout>
+  <TextView
+      android:id="@+id/balanceBreakdownTotal"
+      style="@style/TextAppearance.NovaFoundation.SemiBold.SubHeadline"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="end"
+      android:layout_marginEnd="16dp"
+      android:textColor="@color/white"
+      app:layout_constraintBottom_toBottomOf="@+id/balanceBreakdownTitle"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/balanceBreakdownTitle"
+      tools:text="$11,529.26" />
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/balanceBreakdownList"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
       android:clipToPadding="false"
       android:paddingBottom="16dp"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-      app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+      app:layout_constraintTop_toBottomOf="@+id/balanceBreakdownTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
