--- a/feature-assets/src/main/res/layout/view_total_balance.xml
+++ b/feature-assets/src/main/res/layout/view_total_balance.xml
@@ -9,18 +9,20 @@
     tools:orientation="vertical"
     tools:parentTag="android.widget.LinearLayout">
 
-
     <TextView
         android:id="@+id/viewAssetsTotalBalanceTitle"
         style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:drawablePadding="5dp"
+        android:layout_marginTop="20dp"
+        android:drawablePadding="4dp"
         android:gravity="center_vertical"
         android:includeFontPadding="false"
         android:text="@string/wallet_balance_details_total"
-        android:textColor="@color/white_64" />
+        android:textColor="@color/white_64"
+        app:drawableEndCompat="@drawable/ic_info_16"
+        app:drawableTint="@color/white_48"
+        tools:drawableEnd="@drawable/ic_info_16" />
 
     <TextView
         android:id="@+id/viewAssetsTotalBalanceTotal"
@@ -30,8 +32,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:gravity="center_horizontal"
+        android:textColor="@color/white"
         android:visibility="gone"
         tools:text="$214.66"
         tools:visibility="visible" />
@@ -41,19 +43,22 @@
         style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="20dp"
         android:drawablePadding="5dp"
         android:gravity="center_vertical"
         android:paddingStart="6dp"
         android:paddingTop="1dp"
         android:paddingEnd="6dp"
         android:paddingBottom="1dp"
+        android:textColor="@color/white_64"
         android:visibility="gone"
         app:drawableStartCompat="@drawable/ic_lock"
         app:drawableTint="@color/white_64"
         tools:background="@color/white_16"
-        tools:text="$214.66" />
+        tools:drawableStart="@drawable/ic_lock"
+        tools:text="$214.66"
+        tools:visibility="visible" />
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/viewAssetsTotalBalanceShimmer"
