--- a/app/src/main/res/navigation/staking_parachain_yield_boost.xml
+++ b/app/src/main/res/navigation/staking_parachain_yield_boost.xml
@@ -7,7 +7,22 @@
 
     <fragment
         android:id="@+id/setupYieldBoostFragment"
-        tools:layout="@layout/fragment_setup_yield_boost"
+        tools:layout="@layout/fragment_yield_boost_setup"
         android:name="io.novafoundation.nova.feature_staking_impl.presentation.parachainStaking.yieldBoost.setup.SetupYieldBoostFragment"
-        android:label="SetupYieldBoostFragment" />
+        android:label="SetupYieldBoostFragment" >
+
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_setupYieldBoostFragment_to_yieldBoostConfirmFragment"
+            app:destination="@id/yieldBoostConfirmFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/yieldBoostConfirmFragment"
+        tools:layout="@layout/fragment_yield_boost_confirm"
+        android:name="io.novafoundation.nova.feature_staking_impl.presentation.parachainStaking.yieldBoost.confirm.YieldBoostConfirmFragment"
+        android:label="YieldBoostConfirmFragment" />
 </navigation>
